// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpacedGroup should match snapshot 1`] = `
<div
  className="spaced-group"
/>
`;

exports[`SpacedGroup should take regular element attributes 1`] = `
<div
  className="spaced-group my-class"
/>
`;
